style.css
* {
  box-sizing: border-box;
}
body {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
}

#twitter_embed {
  overflow: scroll;
  height: 385px;
  width: 95%;
  margin: auto;
}

.navigation-header {
  background-color: #000000bf;
  position: fixed;
  width: 100%;
  z-index: 2;
  height: 100px;
}

#it-img {
  width: 90%;
  height: 170px;
  object-fit: cover;
}

.navigation-header a {
  color: #55a7eb;
}

.description {
  font-size: 19px;
  padding-bottom: 10px;
}

.navtext {
  margin-top: -22px;
}

.navigation-header:hover {
  background-color: #000000ff;
}

.navbar-brand {
  position: relative;
  bottom: 15px;
}

.slideshow {
  display: flex;
  align-items: center;
  background-image: url("https://i1.wp.com/www.loudountribune.com/wp-content/uploads/2017/12/Cam_Side-Large.jpg?fit=1000%2C563&ssl=1");
  background-size: cover;
  max-width: 100%;
  height: 100vh;
}

.header-club, .header-faculty, .header-academics {
  display: flex;
  align-items: center;
  background-size: cover;
  max-width: 100%;
  width: auto;
  height: 40vh;
  overflow: visible;
}

#club-text, #faculty-text, #academic-text {
  background-color: white;
  color: black;
  font-size: 6em;
  overflow: visible;
}

.slideshow h2{
  font-size: 80px;
}

.slideshow p{
  font-size: 50px;
}

.boxes-events {
  padding-top: 150px;
}

.boxes, .boxes-clubs, .boxes-events {
  text-align: center;
  color: white;
}

.boxes, .boxes-clubs h2, .boxes-events h2{
  background-color: blue;
  margin: auto;
  font-size: 1.9em;
}

.homebox {
  border: 8px solid white;
  border-radius: 6px;
  box-sizing: border-box;
}

.homebox h2 {
  margin-top: 0px;
}

.homebox p {
  margin: 0px 10px;
}

.test-b {
  background-image: url("background-test.png");
  background-repeat: repeat;

}
.boxes-clubs {
  margin-top: -70px;
}


.description, .events, .news, .twitter, .bioinfo, .invl-2, .invl-3, .programming-comp, .invl-1, .honors, .events-box {
  margin-top: 25px;
  margin-left: 20px;
  margin-right: 20px;
  background-color: black;
}

.events-box {
  background-color: rgb(220,220,220);
}
#events-table, #events-table tr, #events-table tr td{
  border: 2px solid black;
}

#events-table {
  width: 95%;
  margin: auto;
  color: black
}

.description h2, .programming-comp h2, .invl-1 h2, .twelth h2 {
  background-color: #7af969;
  padding: 4px 0px;
}

.events h2, .bioinfo h2, .blahtest h2, #month h2, .invl-2 h2, .tenth h2{
  background-color: #54dcda;
  padding: 4px 0px;
}

.news h2, .honors h2, .boxes-events h2, .invl-3 h2, .eleventh h2 {
  background-color: #4169e1;
  padding: 4px 0px;
}

.col-sm-4 h3{
  background-color: #7da1aa;
  padding: 4px 0px;
  margin-top: -5px;
  margin-bottom: 0px;
}

.col-sm-4 h3:hover{
  background-color: #648e99;
}

.twitter h2 {
  background-color: #4169e1;
}

.title p {
  background-color: rgba(0,0,0,.4);
  background-blend-mode: lighten;
  text-align: center;
  color: white;
  width: 60%
  margin: auto;
}

.title h2 {
  background-color: rgba(0,0,0,.4);
  background-blend-mode: lighten;
  text-align: center;
  color: white;
  width: 100% !important;
  margin: auto;
}

#title-aca h2{
  width: 27%;
}

#title-aca img {
  margin: 10px;
}

#title-inv h2{
  width: 30%;
}

header {
  padding: 50px 50px;
  color: white;
  background-size: cover;
}

header .row,
footer .row {
  display: flex;
  align-items: center;
}

header h1 {
  font-weight: 700;
  margin: 0;
}

header nav {
  display: flex;
  justify-content: flex-end;
}

header p {
  padding: 0 20px;
  margin: 0;
}

.jumbotron {
  display: flex;
  align-items: center;
  background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/jumbotron.jpg');
  background-size: cover;
  color: #ffffff;
  height: 500px;
  text-shadow: 0.25px 0.25px 0.25px #000000;
}

.jumbotron h2 {
  font-size: 60px;
  font-weight: 700;
  margin: 0;
  color: #fff;
}

.jumbotron h3 {
  margin: 0 0 20px;
  color: #fff;
}

section .row img {
  margin: 0 0 30px;
  width: 100%;
}

.col-md-6 {
  margin: 0 0 30px;
}

.btn.btn-primary {
  border-radius: 2px;
  border: 0px;
  color: #fbd1d5;
  text-shadow: none;
  background-color: #ffffff;
}

.btn.btn-primary:hover {
  color: #ffffff;
  background-color: #fbd1d5;
}

.btn-secondary {
  background-color: #E8DFE0;
  color: #ffffff;
  margin: 0 0 30px;
}

.footer {
  display: inline;
  text-align: center;
}

.footer-text {
  font-weight: bold;
  margin-top: 50px;
  display: inline-block;
  padding: 20px;
  background-color: gray;
  width: 100%;
}

.flip-card {
  padding-left: 100px;
  padding-right: 100px;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: transparent;
  height: 300px;
  min-height: 200px;
  perspective: 1000px; /* Remove this if you don't want the 3D effect */

}

/* This container is needed to position the front and back side */
.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

/* Do an horizontal flip when you move the mouse over the flip box container */
.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

/* Position the front and back side */
.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
}

/* Style the front side (fallback if image is missing) */
.flip-card-front {
  background-color: #bbb;
  color: black;
}

/* Style the back side */
.flip-card-back {
  background-color: dodgerblue;
  color: white;
  transform: rotateY(180deg);
}
.teachers{
  margin-top: 99px;
  position: absolute;
  text-align: center;
  width: 100%;
}
.teachers img{
  width: 80%;
}
.news, .events, .twitter, .description {
  min-height: 520px;
}
.club-background, .academic-background {
  display: flex;
  align-items: center;
  position: relative;
  text-align: center;
  color: white;
  height: 50vh;
}
.club-background img, .academic-background img {
  width: 100%;
  height: 100%;
}

.club-background:hover, .academic-background:hover {
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}
.club-content, .academic-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* entire container, keeps perspective */
.flip-container {
	perspective: 1000px;
  padding: 50px;
  margin-bottom: 50px;
}
	/* flip the pane when hovered */
	.flip-container:hover .flipper, .flip-container.hover .flipper {
		transform: rotateY(180deg);
	}

.flip-container, .front, .back {
	width: 100%;
	height: 40vh;
}

/* flip speed goes here */
.flipper {
	transition: 0.6s;
	transform-style: preserve-3d;

	position: relative;
}

/* hide back of pane during swap */
.front, .back {
	backface-visibility: hidden;

	position: absolute;
	top: 0;
	left: 0;
}

/* front pane, placed above back */
.front {
	z-index: 2;
	/* for firefox 31 */
	transform: rotateY(0deg);
  background-color: gray;
}

.front img {
  width: 100%;
  height: 100%;
}


/* back, initially hidden pane */
.back {
	transform: rotateY(180deg);
  background-color: #54dcda;
}


.boxes-faculty {
  position: relative;
  color: white;
  text-align: center;
  bottom: 95px;
}

.boxes-faculty h2 {
  font-size: 60px;
}

